--- a/www/templates/addUser.html
+++ b/www/templates/addUser.html
@@ -49,8 +49,8 @@
 	</div>
 	<div class="row">
 	<div class="col-80 col-offset-10 add-user">
-		<form name="userForm" novalidate ng-submit="userForm.$valid && createUser(username)">		
-		 <input type="text" placeholder="Seu nome" ng-model="username" required ng-minlength="3" ng-value="result.text" name="username">		
+		<form name="userForm" novalidate ng-submit="userForm.$valid && createUser(estabelecimento)">		
+		 <input type="text" placeholder="Seu nome" ng-model="estabelecimento" required ng-minlength="3" name="estabelecimento">		
 			<!-- <label class="item-stacked-label">
 		  <input type="text" placeholder="Seu nome" ng-model="username" required ng-minlength="3" name="username">
 			</label> -->
