--- a/www/templates/contact.html
+++ b/www/templates/contact.html
@@ -4,11 +4,11 @@
 	<img src="img/contact/banner.jpg" alt="" class="fullwidth-image">
 </div>
 <div class="content padding">
-	<h4>Informãções do estabelecimento:</h4>
+	<h4>{{estabelecimento}}</h4>
 	<dl class="address">
-		<dt>Locations:</dt><dd>London</dd>
-		<dt>Email:</dt><dd>info@rococo.com</dd>
-		<dt>Phone:</dt><dd>+111255553685</dd>
+		<dt>Endereço:</dt><dd>London</dd>
+		<dt>E-mail:</dt><dd>info@rococo.com</dd>
+		<dt>Telefone:</dt><dd>+111255553685</dd>
 	</dl>	
 </div>
 <div class="form padding"> 
