--- a/www/templates/dishitems.html
+++ b/www/templates/dishitems.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{facebookPage}}" class="">
+<ion-view view-title="{{estabelecimento}}" class="">
 <ion-nav-buttons side="right">
   <button class="button button-icon iconic iconic-filter" menu-toggle="right">     
   </button>
