--- a/www/templates/addUser.html
+++ b/www/templates/addUser.html
@@ -2,7 +2,7 @@
 <ion-content has-header="false" has-bouncing="false">
 	<div class="row">
 		<div class="col">
-			<img src="img/logo.png" class="app-logo" alt="Logo">
+			<img src="http://www.mondonew.com/easyresto/assets/images/logo_er.png" class="app-logo">
 		</div>
 	</div>	
 	<div class="app-tag-line row">
@@ -32,7 +32,7 @@
 	</div>
 	
 </div>
-	<div class="tag-food-dish row">
+	<div class="tag-food-dish row" ng-style="mapheight">
 		<div class="col">
 			<img src="img/food-dish-cut.png" alt="Food Dish">
 		</div>		
