--- a/www/templates/userpage.html
+++ b/www/templates/userpage.html
@@ -1,4 +1,4 @@
-<ion-view view-title="NomedoApp" class="ionview-with-patbg">
+<ion-view view-title="Easy Resto" class="ionview-with-patbg">
 <ion-content  has-bouncing="false">
 	 <!-- Featured  Dish -->	   	
 	<div class="list card featured-dish" >
