--- a/www/templates/addUser.html
+++ b/www/templates/addUser.html
@@ -1,20 +1,20 @@
 <ion-view view-title="Home" hide-nav-bar="true" class="ionview-with-patbg">
 <ion-content has-header="false" has-bouncing="false">
 	<div class="row">
-		<div class="col">
-			<img src="http://www.mondonew.com/easyresto/assets/images/logo_er.png" class="app-logo">
+		<div class="col"> <br/>  <br/> 
+			<center><img src="img/logo.png" class="app-logo"></center>
 		</div>
 	</div>	
 	<div class="app-tag-line row">
 		<div class="col">
 			<!-- <img src="img/tag.png" alt="Tag">
 			<span class="app-tag-text">at your fingertips! </span> -->
-            <br/>
+            <br/>  <br/>  <br/>
         <button class="ion-qr-scanner button button-full button-assertive" ng-click="scan()">
         Escanear estabelecimento
         </button>
         <br/>
-        
+          <br/>  <br/>  <br/>
         <span class="app-tag-text">{{estabelecimento}}</span><br/>
         <span class="app-tag-text" ng-show="estabelecimento">Aguarde...</span>
 		</div>		
@@ -33,10 +33,10 @@
 	</div>
 	
 </div>
-	<div class="tag-food-dish row" ng-style="mapheight">
+	<!-- <div class="tag-food-dish row" ng-style="mapheight">
 		<div class="col">
 			<img src="img/food-dish-cut.png" alt="Food Dish">
 		</div>		
-	</div>
+	</div> -->
 </ion-content>
 </ion-view>
