--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,24 +15,24 @@
     <ion-content>
       <div class="row">
         <div class="app-logo">
-          <a ui-sref="app.userPage" menu-toggle="left"><img src="http://www.mondonew.com/easyresto/assets/images/logo_er.png"></a>
+          <a ui-sref="app.userPage" menu-toggle="left"><img src="img/logo-cut.png"></a>
         </div>
       </div>
       <ion-list>
-        <ion-item menu-close item-type="item-icon-left" ui-sref="app.dishitems">
+     <!--    <ion-item menu-close item-type="item-icon-left" ui-sref="app.dishitems">
           <i class="icon ion-home"></i> Início
-        </ion-item>
+        </ion-item> -->
          <ion-item menu-close item-type="item-icon-left" ui-sref="app.dishitems">
-          <i class="icon ion-pizza"></i> Cardápio
+         <!--  <i class="icon ion-pizza"></i> --> Cardápio
         </ion-item>
           <ion-item menu-close item-type="item-icon-left" ui-sref="app.booktable">
-          <i class="icon ion-calendar"></i> Reservar Mesa
+         <!--  <i class="icon ion-calendar"></i> --> Reservar Mesa
         </ion-item>
         <ion-item menu-close item-type="item-icon-left" ui-sref="app.cart">
-          <i class="icon ion-card"></i> Fechar Pedido
+          <!-- <i class="icon ion-card"></i> --> Fechar Pedido
         </ion-item>
         <ion-item menu-close item-type="item-icon-left" ui-sref="app.pedidos">
-          <i class="icon ion-document-text"></i> Meus Pedidos
+          <!-- <i class="icon ion-document-text"></i> --> Meus Pedidos
         </ion-item>
       
        <!--  <ion-item menu-close ui-sref="app.packages">
@@ -46,7 +46,7 @@
           Offers
         </ion-item> -->
         <ion-item menu-close ui-sref="app.contact">
-          <i class="icon ion-information-circled"></i> Informações
+          <!-- <i class="icon ion-information-circled"></i> --> Informações
         </ion-item>
        <!--  <ion-item menu-close ui-sref="app.admob">
           Admob
@@ -63,11 +63,11 @@
   </ion-side-menu>
   <ion-side-menu side="right" class="ion-side-menu" >
     <ion-content has-bouncing="false">
-      <div class="row">
+    <!--   <div class="row">
         <div class="app-logo">
           <img src="http://www.mondonew.com/easyresto/assets/images/logo_er.png">
         </div>
-      </div>
+      </div> -->
       <ion-list>
 
         <ion-item
