--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'source-sans-pro'; /*Regular*/
+    src: url('../fonts/sourcesanspro-regular.eot');
+    src: url('../fonts/sourcesanspro-regular.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/sourcesanspro-regular.woff') format('woff'),
+         url('../fonts/sourcesanspro-regular.ttf') format('truetype'),
+         url('../fonts/sourcesanspro-regular.svg#source_sans_proregular') format('svg');
+    font-weight: 400;
+    font-style: normal;
+
+}
 /* Empty. Add your own CSS if you like */
 .item-complex .item-content, .item-radio .item-content {
     font-size: 18px;
@@ -7,7 +18,7 @@
 }
 .card .item.item-footer {
     padding: 5px;
-    background: #f8f8f8;
+    background: #f3f3f3;
 }
 .button, .button-like {
   min-height: 38px;
@@ -17,7 +28,8 @@
 .dish-item .button, .dish-item button {line-height: 12px !important;}
 
 .dish-item {
-    margin-bottom: 11px;
+    margin-bottom: 0;
+    box-shadow: none;
 }
 
 .dish-item .item-title {
@@ -48,20 +60,22 @@
 }
 
 .bar.bar-assertive {
-    border-color: #601608;
-    background-color: #601608;
-    background-image: linear-gradient(0deg, #601608, #601608 50%, transparent 50%);
-    color: #ffffff;
+    border-color: #FBFBFB;
+    background-color: #ff6d00;
+    color: #fbfbfb;
 }
 
 .ion-side-menu {
-    background: #333333;
+    background: #FBFBFB;
 }
 
 .scroll .item-complex .item-content {
-  color: white;
-  border-bottom: 2px solid #1b1b1b;
-  border-top: 1px solid #4e4e4e;
+  color: #ff6d00;
+  border-bottom: none;
+  border-top: none;
+  text-shadow: none;
+  /* font-family: Roboto; */
+  text-shadow: 1px 1px 0px #FFF;
 }
 
 .item-divider {
@@ -109,11 +123,11 @@
     color: #FFF;
     font-size: 17px;
     line-height: 36px;
-    background: #6b6b6b;
+    background: #ababab;
 }
  .dish-item .button, .dish-item .button.selected {
-      background: #3fb981;
-      color:#FFF;
+      background: #f3f3f3;
+      color: #ff6e01;
  }
  .dish-item .item-title a {
     color: #000;
@@ -123,12 +137,18 @@
 .ion-side-menu .item {
     border: none;
 }
-.scroll .item-complex .item-content .icon {
-
-     margin-right: 11px;
-    font-size: 23px;
-}
+.scroll .item-complex .item-content .icon {margin-right: 15px;margin-left: 8px;font-size: 28px;}
 .tag-food-dish, .row + .tag-food-dish {
     position: absolute;
     bottom: -320px;
   }
+
+.bar-assertive .button.button-clear,.bar-assertive .button {
+    /* color: #A3A3A3 !important; */
+}
+
+.dish-item .icon {
+    height: 32px;
+    margin-top: 15px;
+    color: #d2d2d2;
+}
