update splash, api

--- a/www/templates/categories.html
+++ b/www/templates/categories.html
@@ -3,10 +3,10 @@
 <ion-content has-header="false" has-bouncing="false" class="categories-page">
 	<div class="cat-list">
 		<div class="cat-box" ng-repeat="cat in cats">
-			<a class="cat" ui-sref="app.categorie({catid:cat.id})">
+			<a class="cat" ui-sref="app.categorie({catid:cat.CATP_CodigoCategoria})">
 				<span class="cat-image" style="background-image: url({{imageroot}}{{cat.image}})">
 				</span>
-				<h3 ng-bind="cat.name"></h3>
+				<h3 ng-bind="cat.CATP_Nome"></h3>
 			</a>
 		</div>
 	</div>
