--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,7 +9,12 @@
     font-style: normal;
 
 }
-
+@font-face {
+    font-family: 'SFUIText-Regular';
+    src: url("../fonts/SFUIText-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-Regular.otf") format("opentype"), url("../fonts/SFUIText-Regular.woff") format("woff"), url("../fonts/SFUIText-Regular.ttf") format("truetype"), url("../fonts/SFUIText-Regular.svg#SFUIText-Regular") format("svg");
+    font-weight: normal;
+    font-style: normal
+}
 /*!
   Ionicons, v2.0.1
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
@@ -3763,18 +3768,18 @@ a {
 
 .bar.bar-assertive {
     border-color: #FBFBFB;
-    background-color: #ff6d00;
+    background-color: #ff9600;
     color: #fbfbfb;
 }
 
 .ion-side-menu {
-    background: #3c3c3c;
+    background:#443a2b;
 }
 
 .scroll .item-complex .item-content {
   color: #FFF;
   /* border-bottom: 2px solid #000; */
-  border-top: 1px solid #464646;
+  border-top: 1px solid #584c3a;
   text-shadow: none;
   font-family: source-sans-pro;
 }
@@ -3799,6 +3804,7 @@ a {
 }
 .cart-list .item-thumbnail-left {
   padding-left: 20px;
+  background: #FFF;
 }
 
 .button-bar_custom > .button {
@@ -3819,12 +3825,19 @@ a {
 .cart-list h2 {
   padding-top: 6px;
 }
+.list.cart-list {
+    margin: 0;
+}
+
+.list.cart-list + .button {
+    margin: 0;
+}
 .dish-item .badger {
-      padding: 6px 10px;
+      padding: 7px 10px;
     color: #FFF;
     font-size: 17px;
-    line-height: 36px;
-    background: #ababab;
+    line-height: 34px;
+    background: #5fcc71;
 }
  .dish-item .button, .dish-item .button.selected {
       background: #f3f3f3;
@@ -4578,8 +4591,8 @@ button.item.item-button-right {
   padding-top: 8px;
   padding-bottom: 0;
   padding-left: 100px;
-  min-height: 100px;
-  background-image: linear-gradient(0deg, #ECECEC, #F9F9F9 100%, rgba(251, 9, 9, 0) 100%);
+  min-height: 70px;
+  /* background-image: linear-gradient(0deg, #ECECEC, #F9F9F9 100%, rgba(251, 9, 9, 0) 100%); */
   text-shadow: 1px 1px 0 #FFF;
 }
 .item-thumbnail-left > img:first-child,
