--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -5504,10 +5504,10 @@ ion-tabs.tabs-color-active-dark .tab-item {
     animation-fill-mode: both; }
   .popup-container .popup {
     width: 370px;
-    max-width: 100%;
+    max-width: 90%;
     max-height: 90%;
-    border-radius: 0px;
-    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 5px;
+    background-color: #FFF;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -5519,7 +5519,8 @@ ion-tabs.tabs-color-active-dark .tab-item {
     -webkit-flex-direction: column;
     -moz-flex-direction: column;
     -ms-flex-direction: column;
-    flex-direction: column; }
+    flex-direction: column;
+    }
   .popup-container input,
   .popup-container textarea {
     width: 100%; }
@@ -5544,6 +5545,11 @@ ion-tabs.tabs-color-active-dark .tab-item {
   padding: 10px;
   overflow: auto; }
 
+.popup-body input {
+       background: #f5f5f5;
+    padding: 2px 5px !important;
+    color: #666 !important;
+}
 .popup-buttons {
   display: -webkit-box;
   display: -webkit-flex;
