--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4588,8 +4588,8 @@ button.item.item-button-right {
 
 .item-thumbnail-left,
 .item-thumbnail-left .item-content {
-  padding-top: 8px;
-  padding-bottom: 0;
+  padding-top: 0px;
+  padding-bottom: 6px;
   padding-left: 100px;
   min-height: 70px;
   /* background-image: linear-gradient(0deg, #ECECEC, #F9F9F9 100%, rgba(251, 9, 9, 0) 100%); */
@@ -4870,4 +4870,20 @@ button.item.item-button-right {
     min-width: 9px !important;
     margin: 0;
     padding: 0;
+}
+
+a.dish_obs {
+    color: #666;
+    font-size: 13px;
+    background: #f5f5f5;
+    padding: 2px 8px;
+    border: 1px dotted #CCC;
+    width: 100%;
+    display: inline-block;
+    border-radius: 17px;
+    margin-top: 3px;
+}
+
+a.dish_obs i {
+    color: #f9a955;
 }
