--- a/www/templates/contact.html
+++ b/www/templates/contact.html
@@ -4,12 +4,12 @@
 	<img ng-src="{{imgroot + infos.image}}" alt="" class="fullwidth-image">
 </div>
 <div class="content padding">
-	<h4>{{infos.name}}</h4>
+	<h4>{{infos.EMP_Nome}}</h4>
 	<dl class="address">
-		<dt>Endereço:</dt><dd>{{infos.address}}</dd>
-		<dt>E-mail:</dt><dd>{{infos.email}}</dd>
-		<dt>Telefone:</dt><dd><a ng-href="tel:{{infos.website}}" >{{infos.phone}}</a></dd>
-		<dt>Site:</dt><dd><a ng-href="{{infos.website}}" target="_blank">{{infos.website}}</a></dd>
+		<dt>Endereço:</dt><dd>{{infos.EMP_Rua}}, {{infos.EMP_Bairro}}, EMP_Cidade</dd>
+		<dt>E-mail:</dt><dd>{{infos.EMP_Email}}</dd>
+		<dt>Telefone:</dt><dd><a ng-href="tel:{{infos.website}}" >{{infos.EMP_Telefone}}</a></dd>
+		<dt>Site:</dt><dd><a ng-href="{{infos.website}}" target="_blank">{{infos.EMP_Site}}</a></dd>
 	</dl>	
 </div>
 <div class="form padding"> 
