--- a/www/templates/pedido.modal.html
+++ b/www/templates/pedido.modal.html
@@ -5,7 +5,7 @@
         </ion-header-bar>
 
         <ion-content class="padding">
-        <h4>Detalhes do pedido</h4>
+        <h4>Detalhes do pedido s{{scope.modal.pedido.PED_CodigoPedido}}</h4>
           <div class="list">
             <label class="item item-input">
               <span class="input-label">First Name</span>
